application_project/OLD_k8s_manifests/ai_app_backup.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: ai-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-subnets: "${lb_subnet_ids}"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: ai-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      serviceAccountName: eks-pods-sa
      containers:
        - name: ui
          image: migara/ui-app
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: custom-certs
              mountPath: /custom-certs
              readOnly: true
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    apt update && apt install -y ca-certificates
                    cp /custom-certs/* /usr/local/share/ca-certificates/
                    update-ca-certificates
                    echo "Custom certificates added"
      volumes:
        - name: custom-certs
          configMap:
            name: custom-ca-certs
---
apiVersion: v1
kind: Service
metadata:
  name: agent-service
  namespace: ai-app
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: agent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-deployment
  namespace: ai-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      labels:
        app: agent
    spec:
      serviceAccountName: eks-pods-sa
      containers:
        - name: agent
          image: migara/agent-app
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: custom-certs
              mountPath: /custom-certs
              readOnly: true
          command:
            - /bin/bash
          args:
            - -c
            - |
              apt update && apt install -y ca-certificates
              cp /custom-certs/* /usr/local/share/ca-certificates/
              update-ca-certificates
              echo "Custom certificates added"
              sleep infinity
      volumes:
        - name: custom-certs
          configMap:
            name: custom-ca-certs
