application_project/OLD_k8s_manifests/ai_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: migara/ui-app
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: agent-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: agent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      labels:
        app: agent
    spec:
      serviceAccountName: eks-pods-sa
      containers:
        - name: agent
          image: migara/agent-app
          ports:
            - containerPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
  # namespace:
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # - path: /api(/|$)(.*)
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: agent-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
