application_project/OLD_k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
  # namespace:
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # - path: /api(/|$)(.*)
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: agent-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
